# KLE_BELGAUM_DreamAlpha

./: .gitignore  README.md  SUPABASE_SETUP.sql  make_setup_guide.py  package.json  replace_hackathon.py  setup_omnidim_agent.py  setup_omnidim_appt_agent.py  vercel.json
sahayak/: .env.example  .gitignore  FIREBASE_SETUP_GUIDE.md  MAKECOM_BLUEPRINT.json  MAKE_SETUP_GUIDE.md  README.md  README.txt  START_SAHAYAK.bat  VAPI_SETUP_GUIDE.md  config.py  implementation.md  lambda_handler.py  main.py  migrate_db.py  pyproject.toml  render.yaml  requirements.txt  run.sh  task.md
sahayak/data/: anaemia.txt  dengue.txt  diabetes.txt  diarrhoea.txt  hypertension.txt  ingest_guidelines.py  jaundice_hepatitis.txt  malaria.txt  maternal_health.txt  pneumonia.txt  snakebite.txt  tuberculosis.txt  typhoid.txt
sahayak/db/: database.py
sahayak/frontend/: app.js  asha_demo.html  asha_portal.html  auth.html  chatbot_asha.html  chatbot_doctor.html  chatbot_patient.html  doctor.html  doctor.js  firebase_refresh.js  index.css  index.html  offline_sync.js  patient.html  patient.js  portal.css  report_generator.js  sw.js  vitals.html
sahayak/middleware/: rate_limit.py
sahayak/models/: schemas.py
sahayak/routes/: __init__.py  analytics.py  asha_call_routes.py  auth.py  diagnose.py  doctor.py  omnidim_routes.py  patient.py  patients_mgmt.py  referral.py  reports.py  retell_routes.py  transcribe.py  vapi_routes.py
sahayak/services/: agent_service.py  asr_service.py  auth_service.py  bedrock_service.py  clinical_engine.py  deep_impact.py  disease_engine.py  extraction_service.py  (+15 more)
(+63 files in other folders)
